--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>fr.oliviermistral</groupId>
   <artifactId>vigenere-cipher</artifactId>
-  <version>1.0.0</version>
+  <version>2.0.0-SNAPSHOT</version>
 
   <name>vigenere-cipher</name>
   <url>https://oliviermistral.fr/</url>
