--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,8 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
-    <junit.jupiter.version>5.6.0</junit.jupiter.version>
+    <junit.jupiter.version>5.6.1</junit.jupiter.version>
+    <jacoco-maven-plugin>0.8.5</jacoco-maven-plugin>
   </properties>
 
   <dependencies>
@@ -79,10 +80,11 @@
       </plugins>
     </pluginManagement>
     <plugins>
+      <!-- jacoco generated report is used by codecov.io -->
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.8.5</version>
+        <version>${jacoco-maven-plugin}</version>
         <executions>
           <execution>
             <goals>
