--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,7 +20,5 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 11
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v1
+    - name: Build with Maven + SonarSource
+      run: mvn -B package --file pom.xml sonar:source
