--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,10 @@
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
     <junit.jupiter.version>5.6.1</junit.jupiter.version>
-    <jacoco-maven-plugin>0.8.5</jacoco-maven-plugin>
+    <sonar.projectKey>magnasilvar_vigenere-cipher</sonar.projectKey>
+    <sonar.organization>magnasilvar</sonar.organization>
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+    <sonar.login>848e9c88d8f385f4ac5ed1cbd9de5c1787f71e09</sonar.login>
   </properties>
 
   <dependencies>
@@ -79,27 +82,5 @@
         </plugin>
       </plugins>
     </pluginManagement>
-    <plugins>
-      <!-- jacoco generated report is used by codecov.io -->
-      <plugin>
-        <groupId>org.jacoco</groupId>
-        <artifactId>jacoco-maven-plugin</artifactId>
-        <version>${jacoco-maven-plugin}</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>prepare-agent</goal>
-            </goals>
-          </execution>
-          <execution>
-            <id>report</id>
-            <phase>test</phase>
-            <goals>
-              <goal>report</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
   </build>
 </project>
