Fix wrong sonar goal

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,4 +21,4 @@ jobs:
       with:
         java-version: 11
     - name: Build with Maven + SonarSource
-      run: mvn -B package --file pom.xml sonar:source
+      run: mvn -B package --file pom.xml sonar:sonar
