--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,5 +20,7 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 11
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+    - name: Build with Maven + SonarSource
+      run: mvn -B package --file pom.xml sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.projectKey=magnasilvar_vigenere-cipher -Dsonar.organization=magnasilvar
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
