--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,6 +21,7 @@ jobs:
       with:
         java-version: 11
     - name: Build with Maven + SonarSource
-      run: mvn -B package --file pom.xml sonar:sonar -Dsonar.scm.provider=git -Dsonar.host.url=https://sonarcloud.io -Dsonar.projectKey=magnasilvar_vigenere-cipher -Dsonar.organization=magnasilvar
+      run: mvn -B clean package --file pom.xml sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.projectKey=magnasilvar_vigenere-cipher -Dsonar.organization=magnasilvar
       env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
