--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,12 +16,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - run: |
+      git fetch --no-tags --prune --depth=1 origin +refs/heads/*:refs/remotes/origin/*
     - name: Set up JDK 11
       uses: actions/setup-java@v1
       with:
         java-version: 11
     - name: Build with Maven + SonarSource
-      run: mvn -B clean package --file pom.xml sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.projectKey=magnasilvar_vigenere-cipher -Dsonar.organization=magnasilvar
+      run: mvn -B package --file pom.xml sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.projectKey=magnasilvar_vigenere-cipher -Dsonar.organization=magnasilvar
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
