--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,7 +16,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - run: git fetch --no-tags --prune --depth=1 origin +refs/heads/*:refs/remotes/origin/*
+    - run: git fetch --no-tags --prune --unshallow --depth=1 origin +refs/heads/*:refs/remotes/origin/*
     - name: Set up JDK 11
       uses: actions/setup-java@v1
       with:
