--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,6 +22,10 @@ jobs:
       with:
         java-version: 11
     - name: Build with Maven + SonarSource
-      run: mvn -B package --file pom.xml sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.projectKey=magnasilvar_vigenere-cipher -Dsonar.organization=magnasilvar
+      run: mvn -B package --file pom.xml sonar:sonar
+        -Dsonar.java.libraries=~/.m2/repository/**/*.jar
+        -Dsonar.host.url=https://sonarcloud.io
+        -Dsonar.projectKey=magnasilvar_vigenere-cipher
+        -Dsonar.organization=magnasilvar
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
