Replace codecov by sonarsource (#5)
* Replace codecov by sonarsource

* Improve actions/checkout@v2 fetching all branches

* Add actions/cache@v1 on .m2

--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
       </plugins>
     </pluginManagement>
     <plugins>
-      <!-- jacoco generated report is used by codecov.io -->
+      <!-- jacoco generated report is used by sonarcloud -->
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
