--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,11 +16,22 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - run: git fetch --no-tags --prune --unshallow
     - name: Set up JDK 11
       uses: actions/setup-java@v1
       with:
         java-version: 11
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v1
+    - uses: actions/cache@v1
+      with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
+    - name: Build with Maven + SonarSource
+      run: mvn -B package --file pom.xml sonar:sonar
+        -Dsonar.java.libraries=$HOME/.m2/repository/**/*.jar
+        -Dsonar.host.url=https://sonarcloud.io
+        -Dsonar.projectKey=magnasilvar_vigenere-cipher
+        -Dsonar.organization=magnasilvar
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
