--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,4 +34,5 @@ jobs:
         -Dsonar.projectKey=magnasilvar_vigenere-cipher
         -Dsonar.organization=magnasilvar
       env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
