--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,7 +27,7 @@ jobs:
         key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
         restore-keys: |
           ${{ runner.os }}-maven-
-    - name: Build with Maven + SonarSource
+    - name: Build with Maven + SonarCloud
       run: mvn -B package --file pom.xml sonar:sonar
         -Dsonar.java.libraries=$HOME/.m2/repository/**/*.jar
         -Dsonar.host.url=https://sonarcloud.io
