--- a/pom.xml
+++ b/pom.xml
@@ -98,9 +98,14 @@
               <goal>shade</goal>
             </goals>
             <configuration>
-              <transformers>
-                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer"></transformer>
-              </transformers>
+              <filters>
+                <filter>
+                  <artifact>info.picocli:picocli</artifact>
+                  <excludes>
+                    <exclude>META-INF/MANIFEST.MF</exclude>
+                  </excludes>
+                </filter>
+              </filters>
             </configuration>
           </execution>
         </executions>
