--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>fr.oliviermistral</groupId>
   <artifactId>vigenere-cipher</artifactId>
-  <version>2.0.0-SNAPSHOT</version>
+  <version>2.0.0</version>
 
   <name>vigenere-cipher</name>
   <url>https://oliviermistral.fr/</url>
