Use picocli-codegen with maven-compiler-plugin
Benefits with native-image :
- Include vigenere-cipher JAR
- Include MANIFEST.MF from vigenere-cipher JAR

--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,21 @@
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.1</version>
+          <configuration>
+            <source>${maven.compiler.source}</source>
+            <target>${maven.compiler.source}</target>
+            <annotationProcessorPaths>
+              <path>
+                <groupId>info.picocli</groupId>
+                <artifactId>picocli-codegen</artifactId>
+                <version>${picocli.version}</version>
+              </path>
+            </annotationProcessorPaths>
+            <compilerArgs>
+              <arg>-Aproject=${project.groupId}/${project.artifactId}</arg>
+              <arg>-Aother.resource.patterns=META-INF/MANIFEST.MF</arg>
+            </compilerArgs>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
